# bitfilter

./: .gitignore  CLAUDE.md  CMakeLists.txt  PROGRESS.md  README.md  WEEK3_PLAN.md  WEEK3_VERIFICATION.md  diag_chunks.cpp  plan.md  setup.sh
.github/workflows/: ci.yml  pages.yml
bench/: bench_croaring.cpp  bench_duckdb.cpp  bench_main.cpp  bench_popcount.cpp  bench_sqlite.cpp
docs/: VERIFICATION.md  WEEK4_CROARING.md  WEEK4_DUCKDB.md  WEEK4_PLAN.md  WEEK4_ROOFLINE.md  WEEK4_SQLITE.md
include/: aligned_alloc.hpp  datagen.hpp  query_ast.hpp  query_eval.hpp  segment_store.hpp
scripts/: roofline.py
site/: index.html
src/: query_eval_avx2.cpp  query_eval_avx2_prefetch.cpp  query_eval_avx2_unroll.cpp  query_eval_mt.cpp  query_eval_scalar.cpp  query_eval_sve.cpp  segment_store.cpp
test/: test_correctness.cpp
